sample-node/demo-prod/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-node-redis
    app.kubernetes.io/name: sample-node-redis
  name: sample-node-redis
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: sample-node-redis
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sample-node-redis
        app.kubernetes.io/name: sample-node-redis
        version: redis
    spec:
      containers:
        - image: redis
          imagePullPolicy: Always
          name: redis
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 120Mi
            limits:
              cpu: 110m
              memory: 134Mi
