sample-node/demo-prod/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: sample-node
    app.kubernetes.io/name: sample-node
  name: sample-node
spec:
  replicas: 4
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: sample-node
  strategy:
    canary:
      analysis:
        # templates:
        #   - templateName: success-rate
        templateName: success-rate
        startingStep: 2
        args:
          - name: namespace
            value: demo-prod
          - name: service
            value: sample-node-preview
      canaryService: sample-node-preview
      steps:
        # - setWeight: 10
        # - pause: {}
        - setWeight: 25
        - experiment:
            duration: 60s
            templates:
              - name: canary
                specRef: canary
            analysis:
              - templateName: webmetric
                args:
                  - name: url
                    value: "https://sample-node-preview.demo.mzdev.be/success/99"
        # - setWeight: 20
        # - pause: { duration: 60 }
        # - setWeight: 40
        # - pause: { duration: 60 }
        # - setWeight: 60
        # - pause: { duration: 60 }
        # - setWeight: 80
        # - pause: { duration: 60 }
  template:
    metadata:
      labels:
        app: sample-node
        app.kubernetes.io/name: sample-node
        version: v0.3.165
    spec:
      containers:
        - image: nalbam/sample-node:v0.3.165
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: sample-node
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 120Mi
            limits:
              cpu: 110m
              memory: 134Mi
