sample-node/demo-prod/ingress-preview.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: sample-node
    app.kubernetes.io/name: sample-node
  name: sample-node-preview
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  rules:
    - host: sample-node-preview.demo.spic.me
      http:
        paths:
          - backend:
              serviceName: sample-node-preview
              servicePort: 3000
            path: /
  tls:
    - hosts:
        - sample-node-preview.demo.spic.me
      secretName: sample-node-preview--tls
